# SymbolicConQA

./: PolicyLogic_extraction.py  README.md  dev_with_logic.jsonl  pyproject.toml  pyrightconfig.json
data/ConditionalQA/v1_0/: data_propocessing.py  documents_sq_subset.json
results/: B100_answers.jsonl  B100_per_question_metrics.json  B100_question_with_logic.jsonl  SQ_with_logic.jsonl  all_SQ_with_logic.jsonl  all_SQ_with_logic_yesno.jsonl  all_answers.jsonl  context_with_logic.jsonl  entailment_results.jsonl  llm_answers.jsonl  llm_answers_fewshot.jsonl  subset_context_with_logic.jsonl
scripts/: answer_questions.py  check_entailment.py  evaluate_answers.py  extract.py  llm_answer_questions.py  test_entailment.py
src/symbolic_conqa/: __init__.py  alignment.py  alignment_hyponyms.py  extraction.py  io_utils.py  models.py  prolog_checker.py  prompts.py
